<resources>
    <string name="app_name">Next_Try</string>
    <string name="action_settings">Settings</string>
    <!-- first page  -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="next">Second Page</string>
    <string name="but_text2">Button 2</string>
    <string name="text_bar_text">Enter Text</string>

    <!-- second page -->
    <string name="but_img1">Image 1</string>
    <string name="but_img2">Image 2</string>
    <string name="img_description">Image</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">First Page</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="input_1">Enter text</string>

    <!-- 3rd page  -->
    <string name="hello_blank_fragment">Hello blank fragment. New Text</string>
    <string name="but_plus">+</string>
    <string name="but_minus">-</string>
    <string name="but_todb">Append</string>
    <string name="button_to_3rd">3rd Page</string>
    <string name="db_out">List of vars</string>
    <string name="gen_db">Generate DB</string>
    <string name="text_3rd_dbstatus">Unknown</string>
    <string name="but_3rd_txt">Make txt</string>
</resources>